# MyUniverse

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  error.cc  gl_program_manager.cc  gl_program_manager.hpp  main.cc  main_render.cc  main_render.hpp  sdl_error.cc  sdl_error.hpp  window_manager.cc  window_manager.hpp
engine/: CMakeLists.txt  error.cc  events.cc  gl_program_manager.cc  main_render.cc  sdl_error.cc  window_manager.cc
engine/event/: CMakeLists.txt  sdl_event_bus.cc
engine/event/include/: event_bus.hpp
engine/event/include/universe/engine/event/: abstract_event_bus.hpp  base_event_bus.hpp  event.hpp  event_bus.hpp  sdl_custom_event.hpp  sdl_custom_event_type_assigner.hpp  sdl_event_bus.hpp
engine/event/tests/: CMakeLists.txt  base_event_bus_test.cc  sdl_custom_event_example.cc
engine/include/: events.hpp  gl_program_manager.hpp  window_manager.hpp
engine/include/universe/engine/: error.hpp  sdl_error.hpp  window_manager.hpp
shaders/: normal.vertexshader  red.fragmentshader
